--- a/My_portfolio/index.html
+++ b/My_portfolio/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="root" class="dark:bg-gray-800"></div>
+    <div class="cursor-dot dark:text-white" data-cursor-dot></div>
+    <div class="cursor-outline dark:text-white" data-cursor-outline></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="cursorDot.js"></script>
   </body>
 </html>
