cursor fully functional/working cursor.

--- a/My_portfolio/index.html
+++ b/My_portfolio/index.html
@@ -11,6 +11,12 @@
     <div id="root" class="dark:bg-gray-800"></div>
     <div class="cursor-dot dark:text-white" data-cursor-dot></div>
     <div class="cursor-outline dark:text-white" data-cursor-outline></div>
+
+<!-- Add this to the <head> of your index.html -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lusaxweb/kursor/dist/kursor.css">
+  <script src="https://cdn.jsdelivr.net/gh/lusaxweb/kursor/dist/kursor.min.js"></script>
+  
+
     <script type="module" src="/src/main.jsx"></script>
     <script src="cursorDot.js"></script>
   </body>
