--- a/My_portfolio/index.html
+++ b/My_portfolio/index.html
@@ -8,9 +8,9 @@
     <link rel= stylesheet href="styles.css">
   </head>
   <body>
-    <div id="root" class="dark:bg-gray-800"></div>
-    <div class="cursor-dot dark:text-white" data-cursor-dot></div>
-    <div class="cursor-outline dark:text-white" data-cursor-outline></div>
+     <div id="root" class="dark:bg-gray-800"></div>
+    <!-- <div class="cursor-dot dark:text-white" data-cursor-dot></div> 
+    <div class="cursor-outline dark:text-white" data-cursor-outline></div> -->
 
 <!-- Add this to the <head> of your index.html -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lusaxweb/kursor/dist/kursor.css">
@@ -18,6 +18,5 @@
   
 
     <script type="module" src="/src/main.jsx"></script>
-    <script src="cursorDot.js"></script>
   </body>
 </html>
